crates/ruff_python_parser/tests/snapshots/invalid_syntax@assert_invalid_msg_expr.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/assert_invalid_msg_expr.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..83,
        body: [
            Assert(
                StmtAssert {
                    node_index: NodeIndex(None),
                    range: 0..16,
                    test: BooleanLiteral(
                        ExprBooleanLiteral {
                            node_index: NodeIndex(None),
                            range: 7..12,
                            value: false,
                        },
                    ),
                    msg: Some(
                        Starred(
                            ExprStarred {
                                node_index: NodeIndex(None),
                                range: 14..16,
                                value: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 15..16,
                                        id: Name("x"),
                                        ctx: Load,
                                    },
                                ),
                                ctx: Load,
                            },
                        ),
                    ),
                },
            ),
            Assert(
                StmtAssert {
                    node_index: NodeIndex(None),
                    range: 17..30,
                    test: BooleanLiteral(
                        ExprBooleanLiteral {
                            node_index: NodeIndex(None),
                            range: 24..29,
                            value: false,
                        },
                    ),
                    msg: None,
                },
            ),
            Assert(
                StmtAssert {
                    node_index: NodeIndex(None),
                    range: 31..39,
                    test: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 38..39,
                            id: Name("x"),
                            ctx: Load,
                        },
                    ),
                    msg: None,
                },
            ),
            Assert(
                StmtAssert {
                    node_index: NodeIndex(None),
                    range: 40..61,
                    test: BooleanLiteral(
                        ExprBooleanLiteral {
                            node_index: NodeIndex(None),
                            range: 47..52,
                            value: false,
                        },
                    ),
                    msg: Some(
                        Yield(
                            ExprYield {
                                node_index: NodeIndex(None),
                                range: 54..61,
                                value: Some(
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 60..61,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                ),
                            },
                        ),
                    ),
                },
            ),
            Assert(
                StmtAssert {
                    node_index: NodeIndex(None),
                    range: 62..77,
                    test: BooleanLiteral(
                        ExprBooleanLiteral {
                            node_index: NodeIndex(None),
                            range: 69..74,
                            value: false,
                        },
                    ),
                    msg: Some(
                        Name(
                            ExprName {
                                node_index: NodeIndex(None),
                                range: 76..77,
                                id: Name("x"),
                                ctx: Load,
                            },
                        ),
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 81..82,
                    value: NumberLiteral(
                        ExprNumberLiteral {
                            node_index: NodeIndex(None),
                            range: 81..82,
                            value: Int(
                                1,
                            ),
                        },
                    ),
                },
            ),
        ],
        runtime_body: None,
    },
)
```
## Errors

  |
1 | assert False, *x
  |               ^^ Syntax Error: invalid syntax
2 | assert False, assert x
3 | assert False, yield x
  |


  |
1 | assert False, *x
2 | assert False, assert x
  |               ^^^^^^ Syntax Error: invalid syntax
3 | assert False, yield x
4 | assert False, x := 1
  |


  |
1 | assert False, *x
2 | assert False, assert x
3 | assert False, yield x
  |               ^^^^^^^ Syntax Error: yield expression cannot be used here
4 | assert False, x := 1
  |


  |
2 | assert False, assert x
3 | assert False, yield x
4 | assert False, x := 1
  |                 ^^ Syntax Error: invalid syntax
