crates/ruff_python_parser/tests/snapshots/invalid_syntax@assert_invalid_test_expr.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/assert_invalid_test_expr.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..55,
        body: [
            Assert(
                StmtAssert {
                    node_index: NodeIndex(None),
                    range: 0..9,
                    test: Starred(
                        ExprStarred {
                            node_index: NodeIndex(None),
                            range: 7..9,
                            value: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 8..9,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                    msg: None,
                },
            ),
            Assert(
                StmtAssert {
                    node_index: NodeIndex(None),
                    range: 10..23,
                    test: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 17..23,
                            id: Name("assert"),
                            ctx: Load,
                        },
                    ),
                    msg: None,
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 24..25,
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 24..25,
                            id: Name("x"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Assert(
                StmtAssert {
                    node_index: NodeIndex(None),
                    range: 26..40,
                    test: Yield(
                        ExprYield {
                            node_index: NodeIndex(None),
                            range: 33..40,
                            value: Some(
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 39..40,
                                        id: Name("x"),
                                        ctx: Load,
                                    },
                                ),
                            ),
                        },
                    ),
                    msg: None,
                },
            ),
            Assert(
                StmtAssert {
                    node_index: NodeIndex(None),
                    range: 41..49,
                    test: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 48..49,
                            id: Name("x"),
                            ctx: Load,
                        },
                    ),
                    msg: None,
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 53..54,
                    value: NumberLiteral(
                        ExprNumberLiteral {
                            node_index: NodeIndex(None),
                            range: 53..54,
                            value: Int(
                                1,
                            ),
                        },
                    ),
                },
            ),
        ],
        runtime_body: None,
    },
)
```
## Errors

  |
1 | assert *x
  |        ^^ Syntax Error: invalid syntax
2 | assert assert x
3 | assert yield x
  |


  |
1 | assert *x
2 | assert assert x
  |        ^^^^^^ Syntax Error: invalid syntax
3 | assert yield x
4 | assert x := 1
  |


  |
1 | assert *x
2 | assert assert x
  |               ^ Syntax Error: invalid syntax
3 | assert yield x
4 | assert x := 1
  |


  |
1 | assert *x
2 | assert assert x
3 | assert yield x
  |        ^^^^^^^ Syntax Error: yield expression cannot be used here
4 | assert x := 1
  |


  |
2 | assert assert x
3 | assert yield x
4 | assert x := 1
  |          ^^ Syntax Error: invalid syntax
